sumo/tests/dfrouter/errors/detector_files/broken_detectors_file2c/errors.dfrouter
Error: invalid multi-byte sequence
 In file 'input_messstrecke.det.xml'
 At line/column 2/1.

Quitting (on error).
